--- a/arch/arm/boot/dts/socfpga.dtsi
+++ b/arch/arm/boot/dts/socfpga.dtsi
@@ -62,6 +62,30 @@
 		interrupt-parent = <&intc>;
 		ranges;
 
+		bridge@0xc0000000 {
+			compatible = "altr,bridge-16.0", "simple-bus";
+			reg = <0xc0000000 0x20000000 0xff200000 0x200000>;
+			reg-names = "axi_h2f", "axi_h2f_lw";
+			clocks = <0x2 0x2 0x2>;
+			clock-names = "h2f_axi_clock", "h2f_lw_axi_clock", "f2h_sdram0_clock";
+			#address-cells = <0x2>;
+			#size-cells = <0x1>;
+			ranges = <0x1 0x2000 0xff202000 0x8 0x1 0x30000 0xff230000 0x100 0x1 0x31000 0xff231000 0x80 0x1 0x1000 0xff201000 0x8 0x1 0x3000 0xff203000 0x10 0x1 0x4000 0xff204000 0x10 0x1 0x5000 0xff205000 0x10>;
+
+			vip@0x100031000 {
+				compatible = "ALTR,vip-frame-reader-14.0", "ALTR,vip-frame-reader-9.1";
+				reg = <0x1 0x31000 0x80>;
+				clocks = <0x2>;
+				max-width = <0x400>;
+				max-height = <0x300>;
+				bits-per-color = <0x8>;
+				colors-per-beat = <0x4>;
+				beats-per-pixel = <0x1>;
+				mem-word-width = <0x80>;
+			};
+
+		};
+
 		amba {
 			compatible = "simple-bus";
 			#address-cells = <1>;
@@ -676,6 +700,7 @@
 		i2c1: i2c@ffc05000 {
 			#address-cells = <1>;
 			#size-cells = <0>;
+			clock-frequency = <100000>;
 			compatible = "snps,designware-i2c";
 			reg = <0xffc05000 0x1000>;
 			resets = <&rst I2C1_RESET>;
