drivers: added MiSTer Soundcard

--- a/sound/drivers/Kconfig
+++ b/sound/drivers/Kconfig
@@ -89,6 +89,13 @@ config SND_DUMMY
 	  To compile this driver as a module, choose M here: the module
 	  will be called snd-dummy.
 
+config SND_OCI2S
+	tristate "Opencores I2S soundcard (FPGA)"
+	select SND_PCM
+	select SND_SOC_GENERIC_DMAENGINE_PCM
+	help
+	  Say Y here to include the Opencores I2S driver.
+
 config SND_ALOOP
 	tristate "Generic loopback driver (PCM)"
 	select SND_PCM
