drivers: added MiSTer SPI Audio Driver and Dummy driver for ALSA compatibility

--- a/sound/drivers/Makefile
+++ b/sound/drivers/Makefile
@@ -22,4 +22,6 @@ obj-$(CONFIG_SND_MTS64) += snd-mts64.o
 obj-$(CONFIG_SND_PORTMAN2X4) += snd-portman2x4.o
 
 obj-$(CONFIG_SND) += opl3/ opl4/ mpu401/ vx/ pcsp/
+obj-$(CONFIG_SND_MISTER_AUDIO) += MiSTer-audio-spi.o
+
 obj-$(CONFIG_SND_OCI2S) += opencores_i2s.o MiSTer-audio.o
